--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -297,26 +297,26 @@
                     <StackPanel>
                         <TextBlock Text="{Binding Name, Source={StaticResource Loc}}"  TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                        <TextBlock Text="{Binding User.Name}" 
+                            <TextBlock Text="{Binding Path=User.Name, Mode=TwoWay}" 
 						Name="ProfileName" TextWrapping="Wrap" Margin="12,-6,12,0" 
 						Style="{StaticResource Text24pxDF8D4B}"/>
                     </StackPanel>
                     <StackPanel Margin="0,10">
                             <TextBlock Text="{Binding Sex, Source={StaticResource Loc}}" TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                            <TextBlock Name="ProfileSex" Text="{Binding User.OutSex}"  
+                            <TextBlock Name="ProfileSex" Text="{Binding Path=User.OutSex, Mode=TwoWay}"  
 							TextWrapping="Wrap" Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"/>
                     </StackPanel>
                     <StackPanel Margin="0,10">
                             <TextBlock Text="{Binding BloodGroup, Source={StaticResource Loc}}" TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                            <TextBlock Text="{Binding User.OutBloodDataString}" Name="ProfileBloodGroup" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                            <TextBlock Text="{Binding Path=User.OutBloodDataString, Mode=TwoWay}" Name="ProfileBloodGroup" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                     </StackPanel>
                     <StackPanel Margin="0,10">
                             <TextBlock Text="{Binding GivedBloodCount, Source={StaticResource Loc}}" TextWrapping="Wrap" 
 						Style="{StaticResource Text36pxCBB2A3}"/>
-                            <TextBlock Text="{Binding Events.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Name="GivedBlood" Style="{StaticResource Text24pxDF8D4B}"/>
+                            <TextBlock Text="{Binding Path=User.GivedBlood, Mode=TwoWay}" TextWrapping="Wrap" Margin="12,-6,12,0" Name="GivedBlood" Style="{StaticResource Text24pxDF8D4B}"/>
                     </StackPanel>
 					<Button 
 					FontSize="24"
