--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -73,13 +73,14 @@
 
                     <Grid>
 
-                        <ScrollViewer>
-                            <StackPanel Margin="0,10" Name="UserProfile" Visibility="Collapsed">
+                        <StackPanel Margin="0,10" Name="UserProfile" Visibility="Collapsed">
+                        <ScrollViewer Height="530">
+                            <StackPanel>
                                 <StackPanel Margin="10,0,10,0">
                                     <TextBlock
 							Style="{StaticResource Text36pxCBB2A3}"
 							Text="{Binding Name, Source={StaticResource Loc}}" TextWrapping="Wrap"/>
-                                    <TextBlock Text="{Binding User.Name}" 
+                                    <TextBlock Text="{Binding Path=User.Name}" 
 							Name="ProfileName" TextWrapping="Wrap" 
 							Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"
@@ -90,7 +91,7 @@
                                     <TextBlock
 							Style="{StaticResource Text36pxCBB2A3}"
 							Text="{Binding SecondName, Source={StaticResource Loc}}" TextWrapping="Wrap"/>
-                                    <TextBlock Text="{Binding User.SecondName}" 
+                                    <TextBlock Text="{Binding Path=User.SecondName}" 
 							Name="SecondName" TextWrapping="Wrap" 
 							Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"
@@ -101,7 +102,7 @@
                                     <TextBlock
 							Style="{StaticResource Text36pxCBB2A3}"
 							Text="{Binding UserBirthday, Source={StaticResource Loc}}" TextWrapping="Wrap"/>
-                                    <TextBlock Text="{Binding User.Birthday}" 
+                                    <TextBlock Text="{Binding Path=User.Birthday}" 
 							Name="Birthday" TextWrapping="Wrap" 
 							Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"
@@ -112,7 +113,7 @@
                                     <TextBlock Text="{Binding Sex, Source={StaticResource Loc}}" TextWrapping="Wrap" 
 							Style="{StaticResource Text36pxCBB2A3}"/>
                                     <TextBlock Name="ProfileSex" 
-							Text="{Binding User.OutSex}"  
+							Text="{Binding Path=User.OutSex}"  
 							TextWrapping="Wrap" Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"/>
                                 </StackPanel>
@@ -120,24 +121,25 @@
                                     <TextBlock Text="{Binding BloodGroup, Source={StaticResource Loc}}" 
 							TextWrapping="Wrap" 
 							Style="{StaticResource Text36pxCBB2A3}"/>
-                                    <TextBlock Text="{Binding User.OutBloodDataString}" 
+                                    <TextBlock Text="{Binding Path=User.OutBloodDataString}" 
 							Name="ProfileBloodGroup" TextWrapping="Wrap" 
 							Margin="12,-6,12,0" 
 							Style="{StaticResource Text24pxDF8D4B}"/>
                                 </StackPanel>
                                 <StackPanel Margin="10">
                                     <TextBlock Text="{Binding NextBloodGive, Source={StaticResource Loc}}" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
-                                    <TextBlock Text="{Binding User.NearestBloodGive}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
+                                    <TextBlock Text="{Binding Path=User.NearestBloodGive}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                                 </StackPanel>
 
                                 <StackPanel Margin="10">
                                     <TextBlock Text="{Binding GivedBloodCount, Source={StaticResource Loc}}" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
-                                    <TextBlock Text="{Binding User.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
+                                    <TextBlock Text="{Binding Path=User.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                                 </StackPanel>
                             </StackPanel>
                         </ScrollViewer>
+                </StackPanel>
 
-                        <StackPanel Name="RegisterForm" Visibility="Collapsed">
+                <StackPanel Name="RegisterForm" Visibility="Collapsed">
                             <ScrollViewer Height="600">
                                 <StackPanel>
                                     <TextBlock Margin="10,10,10,0"
