--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -160,7 +160,7 @@
                         </StackPanel>
                     </ListBoxItem>
 
-                            <ListBoxItem Name="QrButtonMenu" Tap="QrButtonMenu_Tap">
+                            <ListBoxItem Visibility="Collapsed" Name="QrButtonMenu" Tap="QrButtonMenu_Tap">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Height="64" Width="64" 
 						 Source="images/ic_menu_profile_normal.png"/>
